# sp

./: .gitignore  AGENTS.md  KNOWN_ISSUES.md  ROADMAP_PROMPT.md  db_clear.sh  db_init.sql  deploy.sh  slice_icons.sh
sp_axum/: .env  .gitignore  Cargo.toml  env-example  env-prod
sp_axum/migrations/: add_device_tokens_table.sql  add_fingerprint_column.sql  add_password_resets_table.sql  make_email_nullable.sql  rename_username_to_account_name.sql
sp_axum/root/: index.html  manifest.json  sp2.mobile.js
sp_axum/src/: account.rs  main.rs
sp_server/: .env  .gitignore  CLAUDE.md  Cargo.toml  accounts_schema.sql  dynamic_scene.ron  env-prod  goblin_crisis_balance_checkpoint2_candidate_report.json  goblin_crisis_balance_checkpoint2_control_report.json  goblin_crisis_balance_checkpoint3_pairs.json  goblin_crisis_balance_checkpoint4_candidate2_preparation_smoke.json  goblin_crisis_balance_checkpoint4_candidate2_smoke.json  goblin_crisis_balance_checkpoint4_candidate3_policy_v4_preparation_smoke.json  goblin_crisis_balance_checkpoint4_candidate3_policy_v4_smoke.json  goblin_crisis_balance_checkpoint4_candidate3_preparation_smoke.json  goblin_crisis_balance_checkpoint4_candidate3_smoke.json  goblin_crisis_balance_checkpoint4_corrected_baseline.json  goblin_crisis_balance_checkpoint4_policy_v3_current_smoke.json  goblin_crisis_balance_report.json  goblin_crisis_checkpoint4_corrected_headless.csv  goblin_crisis_checkpoint4_corrected_headless.json  goblin_crisis_checkpoint4_corrected_headless_aggregate.json  goblin_crisis_checkpoint4_corrected_pairs.json  goblin_crisis_checkpoint4_diagnostic_headless.json  goblin_crisis_checkpoint4_diagnostic_headless_aggregate.json  goblin_crisis_checkpoint4_diagnostic_pairs.json  map_output.txt  map_output_new.txt  output.txt  psql_login  schema.sql  scores_schema.sql  tasks.md
sp_server/assets/: dynamic_scene.ron
sp_server/certs/: README.md  cert.pem  localhost.key  private_key.pem  privkey.pem  public_key.pem  san.cnf  server.conf  server.crt  server.key
sp_server/db/: accounts.sql
sp_server/docs/: gear_progression_plan.md  headless_harness_plan.md
sp_server/logs/: ai_debug.log.2026-01-29  ai_debug.log.2026-01-30  ai_debug.log.2026-01-31  ai_debug.log.2026-02-01  ai_debug.log.2026-02-02  ai_debug.log.2026-02-03  ai_debug.log.2026-02-06  ai_debug.log.2026-02-07
sp_server/map/: loader_test.tmx  loader_test2.tmx
sp_server/src/: combat.rs  constants.rs  crisis_balance.rs  database.rs  effect.rs  encounter.rs  event.rs  experiment.rs  farm.rs  game.rs  game_tests.rs  headless.rs  headless_bot.rs  ids.rs  item.rs  lib.rs  main.rs  map.rs  network.rs  obj.rs  player.rs  player_setup.rs  recipe.rs  resource.rs  safe_logout.rs  structure.rs  templates.rs  terrain_feature.rs  trade.rs  villager_util.rs  world.rs
sp_server/templates/: combo_template.yaml  dialogue_template.yaml  effect_template.yaml  item_template.yaml  obj_init.yaml  obj_template.yaml  player_start.yaml  price_template.yaml  recipe_template.yaml  res_property_template.yaml  res_template.yaml  skill_xp_template.yaml  skills.yaml  terrain_feature_template.yaml
sp_server/tests/: test.rs  (+1 more)
(+293 files in other folders)
